<resources>
    <string name="app_name">优惠客</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_taste_right_now">立即体验</string>
    <string name="ec_tab_home_title">首页</string>
    <string name="ec_tab_work_home">职业说</string>
    <string name="ec_tab_contacts">消息</string>
    <string name="ec_tab_me_title">我</string>
    <string name="ec_tab_bills_title">自记账</string>
    <string name="ec_tab_store_title">我的店铺</string>
    <string name="ec_tab_figures_title">报表</string>


    <string name="webview_test">WebView代理</string>
    <string name="login_test">登录</string>
    <string name="logout_test">退出登录</string>
    <string name="transaction_test">电商交易</string>
    <string name="mine_test">订单与购物车</string>
    <string name="default_showurl">https://h5.m.taobao.com/awp/core/detail.htm?id=522166121586</string>
    <string name="default_open">默认方式</string>
    <string name="taobao_open">手淘</string>
    <string name="tmall_open">天猫</string>
    <string name="h5_open">H5</string>
    <string name="open_type">打开方式:</string>
    <string name="commodity_type">商品类型:</string>
    <string name="common_commodity">普通商品</string>
    <string name="taoke_commodity">淘客商品</string>
    <string name="input_url">请输入URL:</string>
    <string name="open_url">打开URL</string>
    <string name="isconfuse">商品id是否混淆:</string>
    <string name="notconfuse">不混淆</string>
    <string name="confuse">混淆</string>
    <string name="input_itemid">请输入商品id:</string>
    <string name="itemid">522166121586</string>
    <string name="open_item">打开商品详情页</string>
    <string name="add_item_to_cart">添加商品到购物车</string>
    <string name="input_shopid">请输入店铺id:</string>
    <string name="shopid">60552065</string>
    <string name="open_shop">打开店铺</string>
    <string name="order_type">订单页面参数(仅在H5打开方式下有效):</string>
    <string name="order_all">全部</string>
    <string name="order_topay">待付款</string>
    <string name="order_tosend">待发货</string>
    <string name="order_toreceive">待收货</string>
    <string name="order_tocomment">待评价</string>
    <string name="show_order">分域显示我的订单</string>
    <string name="show_allorder">全部显示我的订单</string>
    <string name="show_cart">显示我的购物车</string>
    <string name="brand_business_title">我的品牌商</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="select_cc">查看橱窗</string>
    <string name="cancel">取消</string>


    <string name="search_reord">搜索记录</string>
    <string name="clear">清空</string>
    <string name="search">搜索</string>
    <string name="all_pro">默认</string>
    <string name="price">价格</string>
    <string name="login">登录</string>
    <string name="login_out">退出登录</string>
    <string name="loading">正在加载</string>
    <string name="ok">确定</string>

    <string name="str_add_friend">加好友</string>


</resources>
