<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@color/ec_tab_press">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="@dimen/margin_15"
            android:src="@mipmap/icon_back_old"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/cancle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="@dimen/margin_15"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_13"
            android:textColor="@color/white"
            android:text="@string/ec_tab_me_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_10"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_select_cc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_10"
            android:text="@string/select_cc"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/margin_15"
            android:layout_marginRight="@dimen/margin_10"
            android:text="@string/save"
            android:textColor="@color/white"
            android:visibility="gone" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1px"
            android:background="@color/line"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            ></View>
</RelativeLayout>